--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,22 +18,20 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  http: ^0.12.1
-  json_serializable: ^3.3.0
-  permission_handler: ^5.0.0+hotfix.6
-  barcode_scan: ^3.0.1
-  qr_flutter: ^3.2.0
-  share: '>=0.6.4'
-  flutter_file_dialog: ^0.0.5
-  path_provider: ^1.6.9
-  flutter_local_notifications: ^1.4.3
-  archive: ^2.0.13
-  overlay_support: ^1.0.4
+  http: ^0.13.1
+  json_serializable: ^4.1.0
+  permission_handler: ^6.1.1
+  qr_flutter: ^4.0.0
+  share: ^2.0.1
+  flutter_file_dialog: ^2.0.0
+  path_provider: ^2.0.1
+  flutter_local_notifications: ^5.0.0+1
+  overlay_support: ^1.2.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -41,7 +39,7 @@ dependencies:
 #  cupertino_icons: ^0.1.3
 
 dev_dependencies:
-  build_runner: ^1.10.0
+  build_runner: ^1.12.2
   flutter_test:
     sdk: flutter
 
