--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   path_provider: ^2.0.1
   flutter_local_notifications: ^5.0.0+1
   overlay_support: ^1.2.0
+  qr_code_scanner: ^0.4.0
 
 
   # The following adds the Cupertino Icons font to your application.
