--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "peerlanflutter",
-    "short_name": "peerlanflutter",
+    "name": "Anywherelan",
+    "short_name": "Anywherelan",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
