--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,16 +23,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  http: ^0.13.1
-  json_serializable: ^4.1.0
-  permission_handler: ^6.1.1
+  http: ^0.13.3
+  json_serializable: ^4.1.3
+  permission_handler: ^8.1.1
   qr_flutter: ^4.0.0
-  share: ^2.0.1
-  flutter_file_dialog: ^2.0.0
-  path_provider: ^2.0.1
-  flutter_local_notifications: ^5.0.0+1
-  overlay_support: ^1.2.0
-  qr_code_scanner: ^0.4.0
+  share: ^2.0.4
+  flutter_file_dialog: ^2.1.0
+  path_provider: ^2.0.2
+  flutter_local_notifications: ^6.0.0
+  overlay_support: ^1.2.1
+  qr_code_scanner: ^0.5.1
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -40,7 +40,7 @@ dependencies:
 #  cupertino_icons: ^0.1.3
 
 dev_dependencies:
-  build_runner: ^1.12.2
+  build_runner: ^2.0.4
   flutter_test:
     sdk: flutter
 
