--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,7 @@ dependencies:
   json_serializable: ^4.1.3
   permission_handler: ^8.1.1
   qr_flutter: ^4.0.0
-  share: ^2.0.4
+  share_plus: ^2.1.4
   flutter_file_dialog: ^2.1.0
   path_provider: ^2.0.2
   flutter_local_notifications: ^6.0.0
