--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
   flutter_local_notifications: ^6.1.1
   overlay_support: ^1.2.1
   qr_code_scanner: ^0.5.2
-
+  file_saver: ^0.0.10
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
