--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,29 +22,30 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 0.5.0
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: '>=2.17.0 <3.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  http: ^0.13.3
-  json_serializable: ^5.0.2
-  permission_handler: ^8.1.4
+  http: ^0.13.5
+  json_serializable: ^6.5.4
+  permission_handler: ^10.2.0
   qr_flutter: ^4.0.0
-  share_plus: ^2.1.4
-  flutter_file_dialog: ^2.1.1
-  path_provider: ^2.0.2
-  flutter_local_notifications: ^8.2.0
-  overlay_support: ^1.2.1
-  qr_code_scanner: ^0.5.2
-  file_saver: ^0.1.0
+  share_plus: ^6.2.0
+  flutter_file_dialog: ^2.3.2
+  path_provider: ^2.0.11
+  flutter_local_notifications: ^12.0.3
+  overlay_support: ^2.1.0
+  qr_code_scanner: ^1.0.1
+  file_saver: ^0.1.1
+  url_launcher: ^6.1.6
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
 #  cupertino_icons: ^0.1.3
 
 dev_dependencies:
-  build_runner: ^2.0.4
+  build_runner: ^2.3.2
   flutter_test:
     sdk: flutter
 
