--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,25 +27,25 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  http: ^1.1.0
-  json_serializable: ^6.7.1
-  permission_handler: ^10.4.3
+  http: ^1.3.0
+  json_serializable: ^6.9.3
+  permission_handler: ^11.3.1
   qr_flutter: ^4.1.0
-  share_plus: ^7.1.0
+  share_plus: ^10.1.4
   flutter_file_dialog: ^3.0.2
-  path_provider: ^2.1.1
-  flutter_local_notifications: ^15.1.1
+  path_provider: ^2.1.5
+  flutter_local_notifications: ^18.0.1
   overlay_support: ^2.1.0
   qr_code_scanner: ^1.0.1
-  file_saver: ^0.2.8
-  url_launcher: ^6.1.14
+  file_saver: ^0.2.14
+  url_launcher: ^6.3.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
 #  cupertino_icons: ^0.1.3
 
 dev_dependencies:
-  build_runner: ^2.4.6
+  build_runner: ^2.4.14
   flutter_test:
     sdk: flutter
 
@@ -61,8 +61,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  #assets:
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/icons/awl.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
