--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,25 +27,25 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  http: ^1.3.0
-  json_serializable: ^6.9.3
-  permission_handler: ^11.3.1
+  http: ^1.6.0
+  json_serializable: ^6.11.3
+  permission_handler: ^12.0.1
   qr_flutter: ^4.1.0
-  share_plus: ^10.1.4
-  flutter_file_dialog: ^3.0.2
+  share_plus: ^12.0.1
   path_provider: ^2.1.5
-  flutter_local_notifications: ^18.0.1
+  flutter_local_notifications: ^19.5.0
   overlay_support: ^2.1.0
-  qr_code_scanner: ^1.0.1
-  file_saver: ^0.2.14
-  url_launcher: ^6.3.1
+  mobile_scanner: ^7.1.3
+  file_saver: ^0.3.1
+  file_picker: ^10.3.7
+  url_launcher: ^6.3.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
 #  cupertino_icons: ^0.1.3
 
 dev_dependencies:
-  build_runner: ^2.4.14
+  build_runner: ^2.10.4
   flutter_test:
     sdk: flutter
 
