--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,12 +22,13 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 0.13.0
 
 environment:
-  sdk: '>=2.17.0 <3.0.0'
+  sdk: '>=3.10.0 <4.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
   http: ^1.6.0
+  json_annotation: ^4.9.0
   json_serializable: ^6.11.3
   permission_handler: ^12.0.1
   qr_flutter: ^4.1.0
