--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,18 @@ flutter:
   assets:
     - assets/icons/awl.png
 
+  # see https://github.com/flutter/flutter/issues/60069
+  fonts:
+    - family: Roboto
+      fonts:
+        - asset: assets/fonts/Roboto-Regular.woff2
+    - family: "Noto Sans SC 71"
+      fonts:
+        - asset: assets/fonts/NotoSansSC-Regular.woff2
+    - family: "Noto Color Emoji 2"
+      fonts:
+        - asset: assets/fonts/NotoColorEmoji.woff2
+
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
